packages/dartcv/src/gapi/gapi.h

// typedef void (*GMatCallback)(GMat *);
// typedef void (*MatCallback)(void *);

CvStatus *gapi_GMat_New_Empty(GMat *rval);
CvStatus *gapi_GMat_New_FromMat(Mat mat, GMat *rval);
CvStatus *gapi_GScalar_New_Empty(GScalar *rval);
CvStatus *gapi_GScalar_New_FromScalar(Scalar scalar, GScalar *rval);
CvStatus *gapi_GScalar_New_FromDouble(double v0, GScalar *rval);
void gapi_GScalar_Close(GScalarPtr scalar);
CvStatus *gapi_Laplacian(const GMat src, int ddepth, int ksize, double scale, double delta, int borderType,
                         GMat *rval);
CvStatus *gapi_Sobel(const GMat src, int ddepth, int dx, int dy, int ksize, double scale, double delta,
                     int borderType, const Scalar borderValue, GMat *rval);
CvStatus *gapi_I4202BGR(const GMat src, GMat *rval);
CvStatus *gapi_I4202RGB(const GMat src, GMat *rval);
CvStatus *gapi_LUV2BGR(const GMat src, GMat *rval);
CvStatus *gapi_NV12toBGR(const GMat src_y, const GMat src_uv, GMat *rval);
CvStatus *gapi_NV12toBGRp(const GMat src_y, const GMat src_uv, GMat *rval);
CvStatus *gapi_NV12toGray(const GMat src_y, const GMat src_uv, GMat *rval);
CvStatus *gapi_NV12toRGB(const GMat src_y, const GMat src_uv, GMat *rval);
CvStatus *gapi_NV12toRGBp(const GMat src_y, const GMat src_uv, GMat *rval);
CvStatus *gapi_RGB2Gray(const GMat src, GMat *rval);
CvStatus *gapi_RGB2Gray_1(const GMat src, float rY, float gY, float bY, GMat *rval);
CvStatus *gapi_RGB2HSV(const GMat src, GMat *rval);
CvStatus *gapi_RGB2I420(const GMat src, GMat *rval);
CvStatus *gapi_RGB2Lab(const GMat src, GMat *rval);
CvStatus *gapi_RGB2YUV(const GMat src, GMat *rval);
CvStatus *gapi_RGB2YUV422(const GMat src, GMat *rval);
CvStatus *gapi_LUT(const GMat src, const Mat lut, GMat *rval);