packages/dartcv/lib/src/g/gapi.g.dart


  ffi.Pointer<CvStatus> gapi_GMat_New_Empty(
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_GMat_New_Empty(
      rval,
    );
  }

  late final _gapi_GMat_New_EmptyPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(ffi.Pointer<GMat>)>>(
      'gapi_GMat_New_Empty');
  late final _gapi_GMat_New_Empty = _gapi_GMat_New_EmptyPtr
      .asFunction<ffi.Pointer<CvStatus> Function(ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_GMat_New_FromMat(
    Mat mat,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_GMat_New_FromMat(
      mat,
      rval,
    );
  }

  late final _gapi_GMat_New_FromMatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Pointer<GMat>)>>('gapi_GMat_New_FromMat');
  late final _gapi_GMat_New_FromMat = _gapi_GMat_New_FromMatPtr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<GMat>)>();

  void gapi_GScalar_Close(
    GScalarPtr scalar,
  ) {
    return _gapi_GScalar_Close(
      scalar,
    );
  }

  late final _gapi_GScalar_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(GScalarPtr)>>(
          'gapi_GScalar_Close');
  late final _gapi_GScalar_Close =
      _gapi_GScalar_ClosePtr.asFunction<void Function(GScalarPtr)>();

  ffi.Pointer<CvStatus> gapi_GScalar_New_Empty(
    ffi.Pointer<GScalar> rval,
  ) {
    return _gapi_GScalar_New_Empty(
      rval,
    );
  }

  late final _gapi_GScalar_New_EmptyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<GScalar>)>>('gapi_GScalar_New_Empty');
  late final _gapi_GScalar_New_Empty = _gapi_GScalar_New_EmptyPtr
      .asFunction<ffi.Pointer<CvStatus> Function(ffi.Pointer<GScalar>)>();

  ffi.Pointer<CvStatus> gapi_GScalar_New_FromDouble(
    double v0,
    ffi.Pointer<GScalar> rval,
  ) {
    return _gapi_GScalar_New_FromDouble(
      v0,
      rval,
    );
  }

  late final _gapi_GScalar_New_FromDoublePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Double,
              ffi.Pointer<GScalar>)>>('gapi_GScalar_New_FromDouble');
  late final _gapi_GScalar_New_FromDouble =
      _gapi_GScalar_New_FromDoublePtr.asFunction<
          ffi.Pointer<CvStatus> Function(double, ffi.Pointer<GScalar>)>();

  ffi.Pointer<CvStatus> gapi_GScalar_New_FromScalar(
    Scalar scalar,
    ffi.Pointer<GScalar> rval,
  ) {
    return _gapi_GScalar_New_FromScalar(
      scalar,
      rval,
    );
  }

  late final _gapi_GScalar_New_FromScalarPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Scalar, ffi.Pointer<GScalar>)>>('gapi_GScalar_New_FromScalar');
  late final _gapi_GScalar_New_FromScalar =
      _gapi_GScalar_New_FromScalarPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Scalar, ffi.Pointer<GScalar>)>();

  ffi.Pointer<CvStatus> gapi_I4202BGR(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_I4202BGR(
      src,
      rval,
    );
  }

  late final _gapi_I4202BGRPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_I4202BGR');
  late final _gapi_I4202BGR = _gapi_I4202BGRPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_I4202RGB(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_I4202RGB(
      src,
      rval,
    );
  }

  late final _gapi_I4202RGBPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_I4202RGB');
  late final _gapi_I4202RGB = _gapi_I4202RGBPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_LUT(
    GMat src,
    Mat lut,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_LUT(
      src,
      lut,
      rval,
    );
  }

  late final _gapi_LUTPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, Mat, ffi.Pointer<GMat>)>>('gapi_LUT');
  late final _gapi_LUT = _gapi_LUTPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, Mat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_LUV2BGR(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_LUV2BGR(
      src,
      rval,
    );
  }

  late final _gapi_LUV2BGRPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_LUV2BGR');
  late final _gapi_LUV2BGR = _gapi_LUV2BGRPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_Laplacian(
    GMat src,
    int ddepth,
    int ksize,
    double scale,
    double delta,
    int borderType,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_Laplacian(
      src,
      ddepth,
      ksize,
      scale,
      delta,
      borderType,
      rval,
    );
  }

  late final _gapi_LaplacianPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Int, ffi.Double,
              ffi.Double, ffi.Int, ffi.Pointer<GMat>)>>('gapi_Laplacian');
  late final _gapi_Laplacian = _gapi_LaplacianPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, int, int, double, double, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_NV12toBGR(
    GMat src_y,
    GMat src_uv,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_NV12toBGR(
      src_y,
      src_uv,
      rval,
    );
  }

  late final _gapi_NV12toBGRPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, ffi.Pointer<GMat>)>>('gapi_NV12toBGR');
  late final _gapi_NV12toBGR = _gapi_NV12toBGRPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_NV12toBGRp(
    GMat src_y,
    GMat src_uv,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_NV12toBGRp(
      src_y,
      src_uv,
      rval,
    );
  }

  late final _gapi_NV12toBGRpPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, ffi.Pointer<GMat>)>>('gapi_NV12toBGRp');
  late final _gapi_NV12toBGRp = _gapi_NV12toBGRpPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_NV12toGray(
    GMat src_y,
    GMat src_uv,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_NV12toGray(
      src_y,
      src_uv,
      rval,
    );
  }

  late final _gapi_NV12toGrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, ffi.Pointer<GMat>)>>('gapi_NV12toGray');
  late final _gapi_NV12toGray = _gapi_NV12toGrayPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_NV12toRGB(
    GMat src_y,
    GMat src_uv,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_NV12toRGB(
      src_y,
      src_uv,
      rval,
    );
  }

  late final _gapi_NV12toRGBPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, ffi.Pointer<GMat>)>>('gapi_NV12toRGB');
  late final _gapi_NV12toRGB = _gapi_NV12toRGBPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_NV12toRGBp(
    GMat src_y,
    GMat src_uv,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_NV12toRGBp(
      src_y,
      src_uv,
      rval,
    );
  }

  late final _gapi_NV12toRGBpPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, ffi.Pointer<GMat>)>>('gapi_NV12toRGBp');
  late final _gapi_NV12toRGBp = _gapi_NV12toRGBpPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_RGB2Gray(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_RGB2Gray(
      src,
      rval,
    );
  }

  late final _gapi_RGB2GrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_RGB2Gray');
  late final _gapi_RGB2Gray = _gapi_RGB2GrayPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_RGB2Gray_1(
    GMat src,
    double rY,
    double gY,
    double bY,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_RGB2Gray_1(
      src,
      rY,
      gY,
      bY,
      rval,
    );
  }

  late final _gapi_RGB2Gray_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Float, ffi.Float, ffi.Float,
              ffi.Pointer<GMat>)>>('gapi_RGB2Gray_1');
  late final _gapi_RGB2Gray_1 = _gapi_RGB2Gray_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, double, double, double, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_RGB2HSV(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_RGB2HSV(
      src,
      rval,
    );
  }

  late final _gapi_RGB2HSVPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_RGB2HSV');
  late final _gapi_RGB2HSV = _gapi_RGB2HSVPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_RGB2I420(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_RGB2I420(
      src,
      rval,
    );
  }

  late final _gapi_RGB2I420Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_RGB2I420');
  late final _gapi_RGB2I420 = _gapi_RGB2I420Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_RGB2Lab(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_RGB2Lab(
      src,
      rval,
    );
  }

  late final _gapi_RGB2LabPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_RGB2Lab');
  late final _gapi_RGB2Lab = _gapi_RGB2LabPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_RGB2YUV(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_RGB2YUV(
      src,
      rval,
    );
  }

  late final _gapi_RGB2YUVPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_RGB2YUV');
  late final _gapi_RGB2YUV = _gapi_RGB2YUVPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_RGB2YUV422(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_RGB2YUV422(
      src,
      rval,
    );
  }

  late final _gapi_RGB2YUV422Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_RGB2YUV422');
  late final _gapi_RGB2YUV422 = _gapi_RGB2YUV422Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_Sobel(
    GMat src,
    int ddepth,
    int dx,
    int dy,
    int ksize,
    double scale,
    double delta,
    int borderType,
    Scalar borderValue,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_Sobel(
      src,
      ddepth,
      dx,
      dy,
      ksize,
      scale,
      delta,
      borderType,
      borderValue,
      rval,
    );
  }
